--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "main": "src/index.js",
   "dependencies": {
     "@material-ui/core": "4.12.3",
+    "axios": "0.24.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-scripts": "4.0.0"
